--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   },
   "dependencies": {
     "nuxt": "^2.0.0",
-    "nuxt-buefy": "^0.3.2"
+    "nuxt-buefy": "^0.3.2",
+    "vee-validate": "^3.1.3",
+    "vue-pdf": "^4.0.7"
   },
   "devDependencies": {
     "less": "^3.10.3",
