pridani axios modulu, formular, php

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "@nuxtjs/axios": "^5.9.3",
     "nuxt": "^2.0.0",
     "nuxt-buefy": "^0.3.2",
     "vee-validate": "^3.1.3",
