--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
-    "nuxt": "^2.0.0",
-    "nuxt-buefy": "^0.3.2",
-    "vee-validate": "^3.1.3",
+    "axios": "^0.19.1",
+    "nuxt": "^2.11.0",
+    "nuxt-buefy": "^0.3.21",
+    "vee-validate": "^3.2.1",
     "vue-pdf": "^4.0.7"
   },
   "devDependencies": {
